tests/NormalTests/paczka1/fuzzy1/91736511.err
Error in line 1: iwk A768 71,3
Error in line 3: HRxaJ S327 70,5
Error in line 2: TPEIdLvzy A768 84,5
Error in line 26: ubX S775 9,0
Error in line 27: ubX S935 20,1
Error in line 31: ubX S775 48,8
Error in line 16: iwk S327 74,7
Error in line 35: dt39SWZW S775 6,9
